update new theme

--- a/pages/404.md
+++ b/pages/404.md
@@ -4,9 +4,9 @@ layout: single
 title: "Page Not Found"
 excerpt: "Page not found. Your pixels are in another canvas."
 header:
-  image: /assets/images/teaser/sakura.png
-  caption: "Image credit: [**Tokyo Tech**](https://www.titech.ac.jp/english)"
-last_modified_at: 2023-07-17
+  image: /assets/images/teaser/stephansdom.png
+  caption: "Image credit: [**Dan V.**](https://unsplash.com/photos/S5x5rrsDixk)"
+last_modified_at: 2023-07-24
 toc: false
 sitemap: false
 ---
