update updated time

--- a/pages/404.md
+++ b/pages/404.md
@@ -6,7 +6,7 @@ excerpt: "Page not found. Your pixels are in another canvas."
 header:
   image: /assets/images/teaser/stephansdom.png
   caption: "Image credit: [**Dan V.**](https://unsplash.com/photos/S5x5rrsDixk)"
-last_modified_at: 2023-07-24
+# last_modified_at: 2023-07-24
 toc: false
 sitemap: false
 ---
